F&GDEV/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Ad_Review_Company_or_Department__c</fullName>
        <label>Ad Review Company or Department</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Contact_Detail__c</fullName>
        <label>Additional Contact Detail</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__HubSpot_Intelligence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HubSpot Intelligence</label>
        <referenceTo>HubSpot_Inc__HubSpot_Intelligence__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSubscriptionRecip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SalesLink Subscriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyContactID__c</fullName>
        <label>OMFN Legacy Contact ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Role__c</fullName>
        <label>Marketing Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Back Office</fullName>
                </value>
                <value>
                    <fullName>Marketer</fullName>
                </value>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Senior Leadership</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Manually Added</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OmacAgtID__c</fullName>
        <label>OMFN Account ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Detail__c</fullName>
        <label>Preferred Contact Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact__c</fullName>
        <label>Preferred Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuperMasterIDeMail__c</fullName>
        <description>SuperMaster+Email - the external filed required by bulk dataload to upsert the email address of the supermaster account&apos;s contact record</description>
        <externalId>true</externalId>
        <label>SuperMasterIDeMail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Level_IMO2__c</fullName>
        <label>Top Level  IMO</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Level_IMO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Top Level IMO</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IMO Contacts</relationshipLabel>
        <relationshipName>IMO_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Contacts_Agent</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketing_Role__c</field>
            <operation>equals</operation>
            <value>Agent</value>
        </filters>
        <label>Contacts_Agent</label>
    </listViews>
    <listViews>
        <fullName>Hubspot_Additions_No_Account</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>hubs</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2013 12:00 AM</value>
        </filters>
        <label>Hubspot Additions - No Account</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Ad_Review</fullName>
        <active>true</active>
        <label>Ad Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>System</fullName>
        <active>true</active>
        <label>System</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>